<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentWord"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="Good game are worth waiting for"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/guessLetter"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="1"
                android:text="aeiou" />

            <Button
                android:id="@+id/guess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guess_it" />`
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score: " />
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="WrongGuessCountOfCurrentWord :" />
        <TextView
            android:id="@+id/wrongGuessCountOfCurrentWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
    </LinearLayout>
        <Button
            android:id="@+id/getScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_my_score" />
         <Button
            android:id="@+id/submitScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_score" />
        <Button
            android:id="@+id/nextWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_word" />
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_a_new_game" />`
    </LinearLayout>
</RelativeLayout>
